chore: updated showcase as a music-showcase and created an app-showcase

--- a/about_me.html
+++ b/about_me.html
@@ -51,7 +51,8 @@
 							</header>
 							<div class="content">
 								<p>
-									Hello, I'm Sebastián, I'm a Full Stack Developer, although I've been focusing on the Front End lately.
+									Hello, I'm Sebastián.<br/>
+									I'm a Full Stack Developer, although I've been focusing on the Front End lately.
 								</p>
 								<p>
 									I've been a developer for over 3 years, I've mostly worked on web platforms, but my latest job was creating a native app (iOS & Android) for mortgages applications.
