--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="showcase.html" class="link">Showcase</a></h3>
+										<h3><a href="app-showcase.html" class="link">Web Applications Showcase</a></h3>
 										<p>Experience my work</p>
 									</header>
 								</article>
@@ -95,19 +95,19 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="learning_path.html" class="link">Learning path</a></h3>
-										<p>Certificates and timeline</p>
+										<h3><a href="music-showcase.html" class="link">DJ / Music Producer Showcase</a></h3>
+										<p>Listen my work</p>
 									</header>
 								</article>
-								<!-- <article>
+								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="about_me.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="learning_path.html" class="link">Learning path</a></h3>
+										<p>Certificates and timeline</p>
 									</header>
-								</article> -->
+								</article>
 								<!-- <article>
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
