--- a/music-showcase.html
+++ b/music-showcase.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Showcase - Ianchez Portfolio</title>
+		<title>Music - Ianchez Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,7 +45,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Showcase</h1>
+										<h1>Music Showcase</h1>
 									</header>
 
 									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
@@ -57,7 +57,7 @@
 									<br/>
 									<br/>
 
-									<p>Thats how <b>Ianchez</b> personal project was born, exploring composition with my friend and musical brother <b>José Tomás Gutierrez</b> who teached me a lot about music production and helped me to materialize my inner ideas</p> 
+									<p>Thats how <b>Ianchez</b> personal project was born, exploring composition with my friend and musical brother <b>José Tomás Gutierrez </b> (AKA <b>Tomas G</b>) who teached me a lot about music production and helped me to materialize my inner ideas</p> 
 									<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/119505812&color=%23261b1e&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 									<br/>
 									<br/>
@@ -102,23 +102,24 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">contac@ianchez.com</a>
 									</div>
 								</section>
-								<section>
+								<!-- <section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
 										<span>(000) 000-0000 x12387</span>
 									</div>
-								</section>
+								</section> -->
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<h3>Location</h3>
+										<span>
+											Santiago,<br />
+											Chile<br />
+										</span>
 									</div>
 								</section>
 							</section>
