--- a/index.html
+++ b/index.html
@@ -182,21 +182,7 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-								<li><a href="https://github.com/ianchez" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/sebastian-sanchez-ianchez/?locale=en_US" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://soundcloud.com/ianchez" class="icon brands alt fa-soundcloud"><span class="label">Soundcloud</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li>
-							</ul>
-						</div>
-					</footer>
+				<script src="./components/footer.js"></script>
 
 			</div>
 
