--- a/about_me.html
+++ b/about_me.html
@@ -45,7 +45,7 @@
 									I'm a Full Stack Developer, although I've been focusing on the Front End lately.
 								</p>
 								<p>
-									I've been a developer for over 3 years, I've mostly worked on web platforms, but my latest job was creating a native app (iOS & Android) for mortgages applications.
+									I've been a developer for almost 4 years, I've mostly worked as a FrontEnd developer, my latest job was creating and maintaining a TV app (TvOS & AndroidTV) for football games streaming.
 								</p>
 							</div>
 						</div>
@@ -80,21 +80,37 @@
 												<h3>👔 Work Experience</h3>
 											</header>
 											<p>
-												
+
 											</p>
 											<ul>
-												<li><b>React Native Developer</b> | Leniolabs_ LLC <span class="location-span">(📍 Santiago, Chile)</span></li>
-												<li><b>Lead Full Stack Developer - </b> | TCIT Cloud Solutions Ltda. <span class="location-span">(📍 Santiago, Chile)</span></li>
+												<li>
+													<p>
+														<b>Web UI Developer SSr Adv</b> | Globant <i>(currently)</i>
+														<span class="location-span">(📍 Santiago, Chile)</span>
+													</p>
+												</li>
+												<li>
+													<p>
+														<b>React Native Developer</b> | Leniolabs_ LLC
+														<span class="location-span">(📍 Santiago, Chile)</span>
+													</p>
+												</li>
+												<li>
+													<p>
+														<b>Lead Full Stack Developer</b> | TCIT Cloud Solutions Ltda.
+														<span class="location-span">(📍 Santiago, Chile)</span></li>
+													</p>
 											</ul>
 											<ul class="actions">
-												<li><a href="showcase.html" class="button">Learn more</a></li>
+												<li><a href="https://ianchez.notion.site/Sebastian-Sanchez-Pe-a-beffebdcf4414be28128e2dfdd5cb7c4" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<section>
+
+								<section id="education-section">
 									<a href="showcase.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/studying.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -115,9 +131,10 @@
 										</div>
 									</div>
 								</section>
+
 								<section>
 									<a href="showcase.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+										<img src="images/music-hobbies.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -130,7 +147,7 @@
 												<li><b>🎮 Video games on PC</b></li>
 											</ul>
 											<ul class="actions">
-												<li><a href="showcase.html" class="button">Learn more</a></li>
+												<!-- <li><a href="showcase.html" class="button">Learn more</a></li> -->
 											</ul>
 										</div>
 									</div>
