--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about_me.html">About me</a></li>
 							<li><a href="showcase.html">Showcase</a></li>
-							<li><a href="learning_path.html">Learning path</a></li>
+							<li><a href="about_me.html#education-section">Learning path</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -77,7 +77,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="about_me.html" class="link">My experience</a></h3>
+										<h3><a href="https://ianchez.notion.site/Sebasti-n-S-nchez-Pe-a-beffebdcf4414be28128e2dfdd5cb7c4" class="link">My experience</a></h3>
 										<p>My work history and its highlights</p>
 									</header>
 								</article>
@@ -95,7 +95,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="about_me.html" class="link">Learning path</a></h3>
+										<h3><a href="about_me.html#education-section" class="link">Learning path</a></h3>
 										<p>Certificates and timeline</p>
 									</header>
 								</article>
