Added Gastrinut to the showcase section

--- a/app-showcase.html
+++ b/app-showcase.html
@@ -80,7 +80,7 @@
 
 									<div class="slideshow-container">
 
-										<div class="mySlides fade" style="display: block;">
+										<!-- <div class="mySlides fade" style="display: block;">
 											<div class="numbertext">1 / 3</div><br/>
 											<h3>GIT HISTORY APP</h3>
 											<p>
@@ -104,6 +104,31 @@
 												Check the repository: 
 												<a href="https://github.com/Ianchez/git-history-app">https://github.com/Ianchez/git-history-app</a>
 											</span>
+										</div> -->
+
+										<div class="mySlides fade" style="display: block;">
+											<div class="numbertext">1 / 3</div><br/>
+											<h3>GASTRINUT - WebPage</h3>
+											<p>
+												This Webpage is made with React - Typescript - NextJS
+											</p>
+											<p>
+												First it was a HTML/CSS page that I later adapted into React so I could add new functionalities<br/>
+												This is the Webpage of a Nutritionist group, where they show their credentials, and their services<br/>
+												<br/>
+												The clients have the ability to change the main content of the page whenever they like since I created a integration with Google Sheets, so most of the content is served from different Sheets owned by the clients<br/>
+												<br/>
+												Im currently working on creating a shopping cart experience to integrate online payments
+											</p>
+											<div class="iframe-loader">
+												<iframe
+												width="100%"
+												height="600"
+												scrolling="auto"
+												frameborder="no"
+													src="https://gastrinut.cl">
+												</iframe>
+											</div>
 										</div>
 									
 										<div class="mySlides fade">
