chore: added intro-to-program-I game project to showcase

--- a/app-showcase.html
+++ b/app-showcase.html
@@ -107,7 +107,7 @@
 										</div> -->
 
 										<div class="mySlides fade" style="display: block;">
-											<div class="numbertext">1 / 3</div><br/>
+											<div class="numbertext">1 / 4</div><br/>
 											<h3>GASTRINUT - WebPage</h3>
 											<p>
 												This Webpage is made with React - Typescript - NextJS
@@ -134,9 +134,38 @@
 												<a href="https://gastrinut.cl">https://gastrinut.cl</a>
 											</span>
 										</div>
+
+										<div class="mySlides fade" style="display: block;">
+											<div class="numbertext">2 / 4</div><br/>
+											<h3>Mario-like Game using Javascript</h3>
+											<p>
+												This game is made with Javascript and the canvas library p5.js
+											</p>
+											<p>
+												You can move with the keys AWDS, and jump with the spacebar<br/>
+												The idea was to create a simple game that could be played on the browser<br/>
+												Avoid the cracks on the ground, and try to reach the end of the level (flagpole) using the floating platforms<br/>
+												Turn your sound on (it includes sound effects too!)<br/>
+												Try it out!
+											</p>
+											<div class="iframe-loader">
+												<iframe
+													width="100%"
+													height="600"
+													scrolling="auto"
+													frameborder="no"
+													src="https://game-js-two.vercel.app"
+												>
+												</iframe>
+											</div>
+											<span class="repo-link">
+												Check the github repo: 
+												<a href="https://github.com/ianchez/game-js">https://github.com/ianchez/game-js</a>
+											</span>
+										</div>
 									
 										<div class="mySlides fade">
-											<div class="numbertext">2 / 3</div><br/>
+											<div class="numbertext">3 / 4</div><br/>
 											<h3>MOVIE LIBRARY</h3>
 											<p>
 												This SPA (Single Page Application) is made with React - Javascript on the FrontEnd<br/>
@@ -161,7 +190,7 @@
 										</div>
 
 										<div class="mySlides fade">
-											<div class="numbertext">3 / 3</div><br/>
+											<div class="numbertext">4 / 4</div><br/>
 											<h3>SHOPPING CART</h3>
 											<p>
 												This SPA (Single Page Application) is made with React - Javascript on the FrontEnd<br/>
