refactor: App showcase domentions

--- a/app-showcase.html
+++ b/app-showcase.html
@@ -65,8 +65,8 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<header class="major">
-										<h1 class="">Web Apps Showcase</h1>
+									<header class="major" style="width: 98%;">
+										<h1 class="apps-title">Web Apps Showcase</h1>
 									</header>
 
 									<!-- The dots/circles -->
@@ -74,6 +74,7 @@
 										<span class="dot active" onclick="currentSlide(1)"></span>
 										<span class="dot" onclick="currentSlide(2)"></span>
 										<span class="dot" onclick="currentSlide(3)"></span>
+										<span class="dot" onclick="currentSlide(4)"></span>
 									</div>
 
 									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
@@ -123,7 +124,7 @@
 											<div class="iframe-loader">
 												<iframe
 												width="100%"
-												height="600"
+												height="100%"
 												scrolling="auto"
 												frameborder="no"
 													src="https://gastrinut.cl">
@@ -142,7 +143,7 @@
 												This game is made with Javascript and the canvas library p5.js
 											</p>
 											<p>
-												You can move with the keys AWDS, and jump with the spacebar<br/>
+												You can move with the arrow keys and jump with the spacebar<br/>
 												The idea was to create a simple game that could be played on the browser<br/>
 												Avoid the cracks on the ground, and try to reach the end of the level (flagpole) using the floating platforms<br/>
 												Turn your sound on (it includes sound effects too!)<br/>
@@ -151,7 +152,7 @@
 											<div class="iframe-loader">
 												<iframe
 													width="100%"
-													height="600"
+													height="100%"
 													scrolling="auto"
 													frameborder="no"
 													src="https://game-js-two.vercel.app"
@@ -177,7 +178,7 @@
 											<div class="iframe-loader">
 												<iframe
 													width="100%"
-													height="600"
+													height="100%"
 													scrolling="auto"
 													frameborder="no"
 													src="https://movie-challenge-react.vercel.app/02">
@@ -203,7 +204,7 @@
 											<div class="iframe-loader">
 												<iframe
 													width="100%"
-													height="600"
+													height="100%"
 													scrolling="auto"
 													frameborder="no"
 													src="https://movie-challenge-react.vercel.app/01">
