chore: added Podcaster Web App to showcases

--- a/app-showcase.html
+++ b/app-showcase.html
@@ -77,40 +77,15 @@
 										<span class="dot" onclick="currentSlide(2)"></span>
 										<span class="dot" onclick="currentSlide(3)"></span>
 										<span class="dot" onclick="currentSlide(4)"></span>
+										<span class="dot" onclick="currentSlide(5)"></span>
 									</div>
 
 									<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 
 									<div class="slideshow-container">
 
-										<!-- <div class="mySlides fade" style="display: block;">
-											<div class="numbertext">1 / 3</div><br/>
-											<h3>GIT HISTORY APP</h3>
-											<p>
-												This SPA (Single Page Application) is made with React - Typescript - Redux on the FrontEnd<br/>
-												And NestJS (Typescript) on the Backend
-											</p>
-											<p>
-												You can choose a Github repository to show its commits history<br/>
-												By default the page is showing its own repo history, but you can choose whichever repo you want, <b>give it a try!</b>
-											</p>
-											<div class="iframe-loader">
-												<iframe
-												width="100%"
-												height="600"
-												scrolling="auto"
-												frameborder="no"
-													src="https://git-history-app.herokuapp.com/">
-												</iframe>
-											</div>
-											<span class="repo-link">
-												Check the repository: 
-												<a href="https://github.com/Ianchez/git-history-app">https://github.com/Ianchez/git-history-app</a>
-											</span>
-										</div> -->
-
 										<div class="mySlides fade" style="display: block;">
-											<div class="numbertext">1 / 4</div><br/>
+											<div class="numbertext">1 / 5</div><br/>
 											<h3>GASTRINUT - WebPage</h3>
 											<p>
 												This Webpage is made with React - Typescript - NextJS
@@ -123,23 +98,49 @@
 												<br/>
 												Im currently working on creating a shopping cart experience to integrate online payments
 											</p>
-											<div class="iframe-loader">
-												<iframe
-												width="100%"
-												height="100%"
-												scrolling="auto"
-												frameborder="no"
-													src="https://gastrinut.cl">
-												</iframe>
-											</div>
+
 											<span class="repo-link">
 												Check the webpage on: 
 												<a href="https://gastrinut.cl">https://gastrinut.cl</a>
 											</span>
+
+											<div class="iframe-loader">
+												<iframe
+													width="100%"
+													height="100%"
+													scrolling="auto"
+													frameborder="no"
+													src="https://gastrinut.cl">
+												</iframe>
+											</div>
 										</div>
 
 										<div class="mySlides fade">
-											<div class="numbertext">2 / 4</div><br/>
+											<div class="numbertext">2 / 5</div><br/>
+											<h3>Podcaster - Web App</h3>
+											<p>
+												This Web App is made with React - Typescript - NextJS
+											</p>
+											<p>
+												This is a simple React / Typescript SPA that shows the latest popular podcasts in iTunes. The app uses the iTunes RSS API to fetch the data.
+											</p>
+											<span class="repo-link">
+												Check the github repo: 
+												<a href="https://github.com/ianchez/podcasts-app">https://github.com/ianchez/podcasts-app</a>
+											</span>
+											<div class="iframe-loader">
+												<iframe
+													width="100%"
+													height="100%"
+													scrolling="auto"
+													frameborder="no"
+													src="https://podcasts-app-ianchez.vercel.app/">
+												</iframe>
+											</div>
+										</div>
+
+										<div class="mySlides fade">
+											<div class="numbertext">3 / 5</div><br/>
 											<h3>Mario-like Game using Javascript</h3>
 											<p>
 												This game is made with Javascript and the canvas library p5.js
@@ -151,6 +152,10 @@
 												Turn your sound on (it includes sound effects too!)<br/>
 												Try it out!
 											</p>
+											<span class="repo-link">
+												Check the github repo: 
+												<a href="https://github.com/ianchez/game-js">https://github.com/ianchez/game-js</a>
+											</span>
 											<div class="iframe-loader">
 												<iframe
 													width="100%"
@@ -161,14 +166,10 @@
 												>
 												</iframe>
 											</div>
-											<span class="repo-link">
-												Check the github repo: 
-												<a href="https://github.com/ianchez/game-js">https://github.com/ianchez/game-js</a>
-											</span>
 										</div>
 									
 										<div class="mySlides fade">
-											<div class="numbertext">3 / 4</div><br/>
+											<div class="numbertext">4 / 5</div><br/>
 											<h3>MOVIE LIBRARY</h3>
 											<p>
 												This SPA (Single Page Application) is made with React - Javascript on the FrontEnd<br/>
@@ -177,6 +178,12 @@
 												The idea simulate the fetching from a movie database API, and filter the results by genre<br/>
 												You can also change the order on which the list will show, the default its by Year Ascending, <b>give it a try!</b>
 											</p>
+
+											<span class="repo-link">
+												Check the repository: 
+												<a href="https://github.com/Ianchez/mediastream-challenge-react">https://github.com/Ianchez/mediastream-challenge-react</a>
+											</span>
+
 											<div class="iframe-loader">
 												<iframe
 													width="100%"
@@ -186,14 +193,10 @@
 													src="https://movie-challenge-react.vercel.app/02">
 												</iframe>
 											</div>
-											<span class="repo-link">
-												Check the repository: 
-												<a href="https://github.com/Ianchez/mediastream-challenge-react">https://github.com/Ianchez/mediastream-challenge-react</a>
-											</span>
 										</div>
 
 										<div class="mySlides fade">
-											<div class="numbertext">4 / 4</div><br/>
+											<div class="numbertext">5 / 5</div><br/>
 											<h3>SHOPPING CART</h3>
 											<p>
 												This SPA (Single Page Application) is made with React - Javascript on the FrontEnd<br/>
@@ -203,6 +206,12 @@
 												The challenge was to handle the different states of the items added to the cart<br/>
 												The total would get calculated, applying the discount rules, <b>give it a try!</b>
 											</p>
+
+											<span class="repo-link">
+												Check the repository: 
+												<a href="https://github.com/Ianchez/mediastream-challenge-react">https://github.com/Ianchez/mediastream-challenge-react</a>
+											</span>
+
 											<div class="iframe-loader">
 												<iframe
 													width="100%"
@@ -212,10 +221,6 @@
 													src="https://movie-challenge-react.vercel.app/01">
 												</iframe>
 											</div>
-											<span class="repo-link">
-												Check the repository: 
-												<a href="https://github.com/Ianchez/mediastream-challenge-react">https://github.com/Ianchez/mediastream-challenge-react</a>
-											</span>
 										</div>
 									
 										<!-- Next and previous buttons -->
